add /dev/bin to Docker image

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -4,4 +4,6 @@ RUN apt-get update && apt-get install -y jq apache2-utils
 
 COPY ./dev.ini /opt/couchdb/etc/local.d/dev.ini
 
+COPY ./bin /dev/bin
+
 ENV PATH="/dev/bin:${PATH}"
